# Mini-Market

./: Dockerfile  pyproject.toml
docker/: docker-compose.yml  docker-compose_local.yml  nginx_local.conf
docker/nginx/: nginx.conf
mini_market/: example.env  manage.py
mini_market/apps/api/: serializers.py  urls.py  views.py
mini_market/apps/api/tests/: test_urls.py
mini_market/apps/products/: admin.py  models.py  tasks.py
mini_market/apps/products/migrations/: 0001_initial.py  0002_alter_order_options_alter_product_description_and_more.py
mini_market/mini_market/: asgi.py  celery.py  wsgi.py
mini_market/mini_market/settings/: __init__.py  celery.py  core.py  database.py  drf.py  email.py
